@startuml TurnHandler

skinparam classAttributeIconSize 0
hide empty fields
hide empty method

interface TurnHandler <<Interface>> {
    +thinking(pos : Point2D) : List<Point2D>
    +executeTurn(moveAction : MoveType, pos : Point2D) : boolean
    +setStartTurn(turn : int)
    +setStartPlayerColor(color : PlayerColor)
    +surrender()
    +getPromotingPawnPos() : Point2D
}

interface TurnHandlerContext <<Interface>> {
    +thinking(pos : Point2D) : List<Point2D>
    +executeTurn() : boolean
    +transitionTo(newState : TurnState)
    +passOnPromotion(pawn : Optional<Piece>)
    +unsetCurrentPiece()
}

interface TurnState <<Interface>> {
    +thinking(pos : Point2D) : List<Point2D>
}

class TurnHandlerImpl
TurnHandler <|.. TurnHandlerImpl
TurnHandlerContext <|.. TurnHandlerImpl
TurnHandlerImpl o-- TurnState

enum GameState {
    NORMAL
    CHECK
    DOUBLE_CHECK
    CHECKMATE
    DRAW
    PROMOTION
    TIMEOUT
}
TurnHandlerImpl o-- GameState
abstract class AbstractTurnState <<State>> {
    -context : TurnHandlerContext
    +thinking(pos : Point2D) : List<Point2D>
}
TurnState <|.. AbstractTurnState

class NormalTurnState {
    +thinking(pos : Point2D) : List<Point2D>
}
class CheckTurnState {
    +thinking(pos : Point2D) : List<Point2D>
}
class DoubleCheckTurnState {
    +thinking(pos : Point2D) : List<Point2D>
}
AbstractTurnState <|-- NormalTurnState
AbstractTurnState <|-- CheckTurnState
AbstractTurnState <|-- DoubleCheckTurnState
@enduml